--- a/k8s/deployment-frontend.yaml
+++ b/k8s/deployment-frontend.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: industria-frontend:latest
+        image: 7mnm/industria-frontend:latest
         ports: [ { containerPort: 80 } ]
         volumeMounts:
         - name: nginx-conf
