--- a/k8s/deployment-model.yaml
+++ b/k8s/deployment-model.yaml
@@ -15,7 +15,7 @@ spec:
         runAsUser: 1000
       containers:
       - name: model
-        image: industria-model:latest
+        image: 7mnm/industria-model:latest
         ports:
         - containerPort: 8001
         env:
